--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ credentials*
 01_Programacion_basica_y_Ramp-Up/.DS_Store
 .DS_Store
 /
+01_Programacion_basica_y_Ramp-Up/Sprint_02/Unidad_02/Ejercicios_Workout/07_Ejercicios_Programación_Orientada_Objetos.ipynb
